[gd_scene load_steps=22 format=3 uid="uid://bmqkplxqd8vl5"]

[ext_resource type="Script" uid="uid://b6a8t6ogcsmqy" path="res://Scenes/flight_mode/flight_main.gd" id="1_25o61"]
[ext_resource type="PhysicsMaterial" uid="uid://bhjlk0y1u7hg6" path="res://Scenes/flight_mode/deer_feet_physmat.tres" id="2_ph8sb"]
[ext_resource type="Script" uid="uid://m410she5703r" path="res://Scenes/flight_mode/ground.gd" id="3_jp6c4"]
[ext_resource type="PackedScene" uid="uid://cmek6gwoogb1h" path="res://Assets/Flight/Platform.glb" id="3_ph8sb"]
[ext_resource type="Texture2D" uid="uid://c2tntehikldvi" path="res://Scenes/flight_mode/placeholders/gridbox.png" id="4_07op2"]
[ext_resource type="Script" uid="uid://cq8tnxuq7c0ab" path="res://Scenes/flight_mode/top_platform.gd" id="6_g1wwy"]
[ext_resource type="Texture2D" uid="uid://om6niej6xo8v" path="res://Assets/ui/pen/Pen_Updated_Hay.png" id="6_jp6c4"]
[ext_resource type="Script" uid="uid://ci5fibeb4q8ya" path="res://Scenes/flight_mode/physical_ramp.gd" id="7_m27rb"]
[ext_resource type="PackedScene" uid="uid://b4pjvb1ao841e" path="res://Scenes/flight_mode/launch_zone.tscn" id="7_ph8sb"]
[ext_resource type="PackedScene" uid="uid://i54xyk4duyd2" path="res://Scenes/booster.tscn" id="9_jp6c4"]
[ext_resource type="Script" uid="uid://cjwkhx5a5i7b7" path="res://Scenes/flight_mode/guide_context.gd" id="8_ph8sb"]
[ext_resource type="Resource" uid="uid://bxku7vfyd1dkg" path="res://Scripts/guide/game_combined_context.tres" id="9_07op2"]
[ext_resource type="PackedScene" uid="uid://dkr80d2pi0d41" path="res://addons/guide/debugger/guide_debugger.tscn" id="9_jp6c5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ld0ly"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_v3pkt"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_uyybt"]
size = Vector3(48, 10, 36)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d7dld"]
rough = true
bounce = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_oomsc"]
size = Vector3(1000, 10, 2000)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oomsc"]
frequency = 0.05

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vs8a8"]
noise = SubResource("FastNoiseLite_oomsc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ld0ly"]
albedo_texture = ExtResource("4_07op2")
heightmap_scale = 2.0
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
heightmap_texture = SubResource("NoiseTexture2D_vs8a8")
uv1_scale = Vector3(1000, 1000, 1000)

[sub_resource type="PlaneMesh" id="PlaneMesh_3kocc"]
material = SubResource("StandardMaterial3D_ld0ly")
size = Vector2(10000, 10000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3kocc"]
transparency = 4
albedo_color = Color(0.69411767, 0.88235295, 1, 0.23137255)
refraction_enabled = true
refraction_scale = 0.01

[sub_resource type="Curve3D" id="Curve3D_3kocc"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.029159546, 0.045352936, 0, 8.064308, 5.8531265, 0, -8.064308, -5.8531265, 0, -8.419796, -8.5224, 0, -28.095058, 22.371986, 0, 28.095058, -22.371986, 0, -44.261, -65.95485),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="FlightMain" type="Node3D"]
script = ExtResource("1_25o61")

[node name="FarCam" type="Camera3D" parent="."]
transform = Transform3D(0.5135412, 0.1930226, -0.8360728, 0, 0.97437006, 0.22495104, 0.8580649, -0.11552163, 0.5003792, -28.024275, 37.351646, 27.18371)

[node name="NearCam" type="Camera3D" parent="."]
transform = Transform3D(0.21787071, 0.2195472, -0.95096344, 0, 0.97437006, 0.22495107, 0.97597766, -0.049010243, 0.21228671, 3.9757252, 56.097652, 35.834812)

[node name="DeerEmitter" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -0.011143208, 54.429554, 35.88111)

[node name="IceCubeEmitter" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 56.945534, 34.02915)

[node name="IceCube" type="RigidBody3D" parent="IceCubeEmitter"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21360016, -1.794548, 0.03819275)
physics_material_override = ExtResource("2_ph8sb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IceCubeEmitter/IceCube"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
shape = SubResource("BoxShape3D_ld0ly")

[node name="MeshInstance3D" type="MeshInstance3D" parent="IceCubeEmitter/IceCube"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
mesh = SubResource("BoxMesh_v3pkt")

[node name="Platform" parent="." instance=ExtResource("3_ph8sb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.053, 19.99, 54.135345)

[node name="Cube" parent="Platform" index="0"]
visible = false

[node name="TopPlatform" type="StaticBody3D" parent="Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.053, 0.010000229, -54.40011)
collision_layer = 3
collision_mask = 3
physics_material_override = ExtResource("2_ph8sb")
script = ExtResource("6_g1wwy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/TopPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 29, 52)
shape = SubResource("BoxShape3D_uyybt")

[node name="LaunchZone" parent="Platform" instance=ExtResource("7_ph8sb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.328037, -86.66874)

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_d7dld")
script = ExtResource("3_jp6c4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, -478)
shape = SubResource("BoxShape3D_oomsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -481)
layers = 3
mesh = SubResource("PlaneMesh_3kocc")

[node name="PhysicalRamp" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 53.970608, 33.474567)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
polygon = PackedVector2Array(-14, 0, 14, 0, 16, -2, -16, -2)
mode = 2
path_node = NodePath("Path3D")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 1.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = false
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_3kocc")
script = ExtResource("7_m27rb")

[node name="HayPile" parent="PhysicalRamp" instance=ExtResource("9_jp6c4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.053, -52.064125, -53.901672)
texture = ExtResource("6_jp6c4")
speed_boost = -2.0

[node name="HayPile2" parent="PhysicalRamp" instance=ExtResource("9_jp6c4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.0231085, -50.524815, -46.00142)
texture = ExtResource("6_jp6c4")
speed_boost = -2.0

[node name="Path3D" type="Path3D" parent="PhysicalRamp"]
curve = SubResource("Curve3D_3kocc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5252637, 0.8509395, 0, -0.8509395, 0.5252637, 0, 50.174084, 33.2016)

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = 186.0
offset_top = 34.0
offset_right = 226.0
offset_bottom = 74.0

[node name="IceCubeButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Emit Cube"

[node name="CameraOption" type="OptionButton" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FlightStats" type="Label" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GUIDEContext" type="Node" parent="."]
script = ExtResource("8_ph8sb")
game_context = ExtResource("9_07op2")

[node name="GuideDebugger" parent="." instance=ExtResource("9_jp6c5")]

[connection signal="pressed" from="BoxContainer/IceCubeButton" to="." method="_on_ice_cube_button_pressed"]
[connection signal="item_selected" from="BoxContainer/CameraOption" to="." method="_on_camera_option_item_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Platform"]
